--- a/heuristiek.ipynb
+++ b/heuristiek.ipynb
@@ -781,26 +781,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'input_file.xlsx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 101\u001b[0m\n\u001b[0;32m     99\u001b[0m input_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minput_file.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    100\u001b[0m output_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124moutput_plan.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m--> 101\u001b[0m dienstregeling \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(input_file, sheet_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDienstregeling\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    102\u001b[0m afstandsmatrix \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(input_file, sheet_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAfstandsmatrix\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    104\u001b[0m \u001b[38;5;66;03m# Run Simulated Annealing om een geoptimaliseerd plan te vinden\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:478\u001b[0m, in \u001b[0;36mread_excel\u001b[1;34m(io, sheet_name, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, date_format, thousands, decimal, comment, skipfooter, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m    476\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(io, ExcelFile):\n\u001b[0;32m    477\u001b[0m     should_close \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m--> 478\u001b[0m     io \u001b[38;5;241m=\u001b[39m ExcelFile(io, storage_options\u001b[38;5;241m=\u001b[39mstorage_options, engine\u001b[38;5;241m=\u001b[39mengine)\n\u001b[0;32m    479\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m engine \u001b[38;5;129;01mand\u001b[39;00m engine \u001b[38;5;241m!=\u001b[39m io\u001b[38;5;241m.\u001b[39mengine:\n\u001b[0;32m    480\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    481\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEngine should not be specified when passing \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    482\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    483\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:1496\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[1;34m(self, path_or_buffer, engine, storage_options)\u001b[0m\n\u001b[0;32m   1494\u001b[0m     ext \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxls\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1495\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1496\u001b[0m     ext \u001b[38;5;241m=\u001b[39m inspect_excel_format(\n\u001b[0;32m   1497\u001b[0m         content_or_path\u001b[38;5;241m=\u001b[39mpath_or_buffer, storage_options\u001b[38;5;241m=\u001b[39mstorage_options\n\u001b[0;32m   1498\u001b[0m     )\n\u001b[0;32m   1499\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ext \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1500\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1501\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExcel file format cannot be determined, you must specify \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1502\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124man engine manually.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1503\u001b[0m         )\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:1371\u001b[0m, in \u001b[0;36minspect_excel_format\u001b[1;34m(content_or_path, storage_options)\u001b[0m\n\u001b[0;32m   1368\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(content_or_path, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[0;32m   1369\u001b[0m     content_or_path \u001b[38;5;241m=\u001b[39m BytesIO(content_or_path)\n\u001b[1;32m-> 1371\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m get_handle(\n\u001b[0;32m   1372\u001b[0m     content_or_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m, storage_options\u001b[38;5;241m=\u001b[39mstorage_options, is_text\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m   1373\u001b[0m ) \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[0;32m   1374\u001b[0m     stream \u001b[38;5;241m=\u001b[39m handle\u001b[38;5;241m.\u001b[39mhandle\n\u001b[0;32m   1375\u001b[0m     stream\u001b[38;5;241m.\u001b[39mseek(\u001b[38;5;241m0\u001b[39m)\n",
-      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\Lib\\site-packages\\pandas\\io\\common.py:868\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    859\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[0;32m    860\u001b[0m             handle,\n\u001b[0;32m    861\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    864\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    865\u001b[0m         )\n\u001b[0;32m    866\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    867\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[1;32m--> 868\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(handle, ioargs\u001b[38;5;241m.\u001b[39mmode)\n\u001b[0;32m    869\u001b[0m     handles\u001b[38;5;241m.\u001b[39mappend(handle)\n\u001b[0;32m    871\u001b[0m \u001b[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'input_file.xlsx'"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from collections import defaultdict\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "def calculate_energy_consumption(distance):\n",
+    "    \"\"\"Calculate the energy consumption for a bus trip based on the distance.\"\"\"\n",
+    "    return distance * 2.5 / 1000  # kWh per meter\n",
+    "\n",
+    "def generate_feasible_plan(dienstregeling, afstandsmatrix):\n",
+    "    # Standardize location names to lowercase for consistency\n",
+    "    dienstregeling['startlocatie'] = dienstregeling['startlocatie'].str.lower()\n",
+    "    dienstregeling['eindlocatie'] = dienstregeling['eindlocatie'].str.lower()\n",
+    "    afstandsmatrix['startlocatie'] = afstandsmatrix['startlocatie'].str.lower()\n",
+    "    afstandsmatrix['eindlocatie'] = afstandsmatrix['eindlocatie'].str.lower()\n",
+    "\n",
+    "    # Merge the dienstregeling with the afstandsmatrix to get the distance for each trip\n",
+    "    planning_data = pd.merge(\n",
+    "        dienstregeling, \n",
+    "        afstandsmatrix, \n",
+    "        on=['startlocatie', 'eindlocatie', 'buslijn'], \n",
+    "        how='left'\n",
+    "    )\n",
+    "\n",
+    "    # Sort the planning data by departure time\n",
+    "    planning_data = planning_data.sort_values('vertrektijd')\n",
+    "\n",
+    "    # Initialize the bus schedules, state of charge (SOC), and charging schedules for each bus\n",
+    "    bus_schedules = []\n",
+    "    bus_soc = defaultdict(lambda: 300)  # Assuming 300 kWh battery capacity for each bus\n",
+    "    bus_charging = defaultdict(list)\n",
+    "    bus_last_location = defaultdict(lambda: 'ehvgar')  # Assume buses start at the garage\n",
+    "    bus_next_omloop = 1  # Start at omloop nummer 1\n",
+    "\n",
+    "    # Define the date for all trips in the schedule\n",
+    "    schedule_date = \"2024-08-29\"\n",
+    "\n",
+    "    for _, row in planning_data.iterrows():\n",
+    "        start_location = row['startlocatie']\n",
+    "        end_location = row['eindlocatie']\n",
+    "        distance = row['afstand in meters']  # in meters\n",
+    "        bus_line = row['buslijn']\n",
+    "        departure_time = pd.to_datetime(f\"{schedule_date} {row['vertrektijd']}\")\n",
+    "\n",
+    "        # Calculate energy consumption for the trip\n",
+    "        energy_consumption = calculate_energy_consumption(distance)\n",
+    "\n",
+    "        # Calculate arrival time using the minimum travel time in minutes\n",
+    "        travel_time = timedelta(minutes=int(row['min reistijd in min']))  # Convert to int\n",
+    "        arrival_time = departure_time + travel_time\n",
+    "\n",
+    "        # Find an available bus or assign a new one\n",
+    "        available_bus = None\n",
+    "        for bus, soc in bus_soc.items():\n",
+    "            # Check if the bus is available, has sufficient SOC, and is not currently charging\n",
+    "            last_trip = [trip for trip in bus_schedules if trip['omloop nummer'] == bus]\n",
+    "            if last_trip and last_trip[-1]['eindtijd'] <= departure_time.time() and soc >= energy_consumption and not any(charging['starttijd'] <= departure_time.time() <= charging['eindtijd'] for charging in bus_charging[bus]):\n",
+    "                available_bus = bus\n",
+    "                break\n",
+    "        if available_bus is None:\n",
+    "            # If no bus is available, assign a new bus\n",
+    "            available_bus = bus_next_omloop\n",
+    "            bus_next_omloop += 1\n",
+    "\n",
+    "        # Record the trip in the schedule with formatted start and end date-times\n",
+    "        bus_schedules.append({\n",
+    "            'startlocatie': start_location,\n",
+    "            'eindlocatie': end_location,\n",
+    "            'starttijd': departure_time.time(),\n",
+    "            'eindtijd': arrival_time.time(),\n",
+    "            'activiteit': 'dienst rit' if bus_line else 'materiaal rit',\n",
+    "            'buslijn': bus_line if bus_line else 'n/a',\n",
+    "            'energieverbruik': -energy_consumption if end_location == 'ehvgar' else energy_consumption,\n",
+    "            'starttijd datum': departure_time.strftime('%d/%m/%Y  %H:%M:%S'),  # Modified format\n",
+    "            'eindtijd datum': arrival_time.strftime('%d/%m/%Y  %H:%M:%S'),    # Modified format\n",
+    "            'omloop nummer': available_bus\n",
+    "        })\n",
+    "\n",
+    "        # Update the bus SOC after assigning it a trip\n",
+    "        bus_soc[available_bus] -= energy_consumption\n",
+    "\n",
+    "        # Check if the bus needs to charge\n",
+    "        if bus_soc[available_bus] < 0.1 * 300:  # 10% of battery capacity\n",
+    "            # Calculate the charging time required to reach 90% SOC\n",
+    "            charging_time = timedelta(hours=(0.9 * 300 - bus_soc[available_bus]) / 150)  # Assuming 150 kW charging rate\n",
+    "            charging_start = arrival_time\n",
+    "            charging_end = charging_start + charging_time\n",
+    "\n",
+    "            # Record the charging schedule with formatted start and end date-times\n",
+    "            bus_charging[available_bus].append({\n",
+    "                'startlocatie': 'ehvgar',\n",
+    "                'eindlocatie': 'ehvgar',\n",
+    "                'starttijd': charging_start.time(),\n",
+    "                'eindtijd': charging_end.time(),\n",
+    "                'activiteit': 'opladen',\n",
+    "                'buslijn': 'n/a',\n",
+    "                'energieverbruik': -(0.9 * 300 - bus_soc[available_bus]),\n",
+    "                'starttijd datum': charging_start.strftime('%d/%m/%Y  %H:%M:%S'),  # Modified format\n",
+    "                'eindtijd datum': charging_end.strftime('%d/%m/%Y  %H:%M:%S'),    # Modified format\n",
+    "                'omloop nummer': available_bus\n",
+    "            })\n",
+    "\n",
+    "            # Update the bus SOC after charging\n",
+    "            bus_soc[available_bus] = 0.9 * 300\n",
+    "\n",
+    "        # Check if the bus needs to travel to the garage for the next trip\n",
+    "        if bus_last_location[available_bus] != 'ehvgar' and end_location != 'ehvgar':\n",
+    "            # Schedule a material trip from the last location to the garage\n",
+    "            garage_trip_distance = afstandsmatrix[(afstandsmatrix['startlocatie'] == bus_last_location[available_bus]) & (afstandsmatrix['eindlocatie'] == 'ehvgar')]['afstand in meters'].values[0]\n",
+    "            garage_trip_energy = calculate_energy_consumption(garage_trip_distance)\n",
+    "            garage_trip_travel_time = timedelta(minutes=int(afstandsmatrix[(afstandsmatrix['startlocatie'] == bus_last_location[available_bus]) & (afstandsmatrix['eindlocatie'] == 'ehvgar')]['min reistijd in min'].values[0]))\n",
+    "            garage_trip_arrival = arrival_time + garage_trip_travel_time\n",
+    "\n",
+    "            bus_schedules.append({\n",
+    "                'startlocatie': bus_last_location[available_bus],\n",
+    "                'eindlocatie': 'ehvgar',\n",
+    "                'starttijd': arrival_time.time(),\n",
+    "                'eindtijd': garage_trip_arrival.time(),\n",
+    "                'activiteit': 'materiaal rit',\n",
+    "                'buslijn': 'n/a',\n",
+    "                'energieverbruik': garage_trip_energy,\n",
+    "                'starttijd datum': arrival_time.strftime('%d/%m/%Y  %H:%M:%S'),  # Modified format\n",
+    "                'eindtijd datum': garage_trip_arrival.strftime('%d/%m/%Y  %H:%M:%S'),  # Modified format\n",
+    "                'omloop nummer': available_bus\n",
+    "            })\n",
+    "\n",
+    "            # Update the bus SOC after the material trip\n",
+    "            bus_soc[available_bus] -= garage_trip_energy\n",
+    "\n",
+    "        # Update the last location of the bus\n",
+    "        bus_last_location[available_bus] = end_location\n",
+    "\n",
+    "    # Combine the bus schedules and charging schedules\n",
+    "    for bus, charging_trips in bus_charging.items():\n",
+    "        bus_schedules.extend(charging_trips)\n",
+    "\n",
+    "    # Convert the bus_schedules list to a DataFrame for output\n",
+    "    schedule_df = pd.DataFrame(bus_schedules)\n",
+    "    return schedule_df\n",
+    "\n",
+    "def save_plan_to_excel(schedule_df, output_file):\n",
+    "    \"\"\"\n",
+    "    Save the consolidated bus planning schedule to an Excel file on a single sheet.\n",
+    "\n",
+    "    Parameters:\n",
+    "    schedule_df (pandas.DataFrame): DataFrame containing the feasible schedule.\n",
+    "    output_file (str): Path to the Excel file to save the schedule.\n",
+    "    \"\"\"\n",
+    "    # Save the single-sheet DataFrame to an Excel file\n",
+    "    with pd.ExcelWriter(output_file) as writer:\n",
+    "        schedule_df.to_excel(writer, sheet_name='Consolidated Schedule', index=False)\n",
+    "\n",
+    "# Example usage\n",
+    "input_file = 'Connexxion data - 2024-2025.xlsx'  # Input Excel file\n",
+    "output_file = 'feasible_plan_consolidated.xlsx'  # Output Excel file\n",
+    "\n",
+    "# Load the data from the Excel file\n",
+    "dienstregeling = pd.read_excel(input_file, sheet_name='Dienstregeling')\n",
+    "afstandsmatrix = pd.read_excel(input_file, sheet_name='Afstandsmatrix')\n",
+    "\n",
+    "# Generate the feasible plan\n",
+    "feasible_plan_df = generate_feasible_plan(dienstregeling, afstandsmatrix)\n",
+    "\n",
+    "# Save the plan to an Excel file in a single sheet\n",
+    "save_plan_to_excel(feasible_plan_df, output_file)\n"
+   ]
   },
   {
    "cell_type": "code",
