--- a/nieuweplanning.ipynb
+++ b/nieuweplanning.ipynb
@@ -46,6 +46,168 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>startlocatie</th>\n",
+       "      <th>eindlocatie</th>\n",
+       "      <th>starttijd</th>\n",
+       "      <th>eindtijd</th>\n",
+       "      <th>activiteit</th>\n",
+       "      <th>buslijn</th>\n",
+       "      <th>energieverbruik</th>\n",
+       "      <th>starttijd datum</th>\n",
+       "      <th>eindtijd datum</th>\n",
+       "      <th>omloop nummer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ehvgar</td>\n",
+       "      <td>ehvbst</td>\n",
+       "      <td>05:03:00</td>\n",
+       "      <td>05:07:00</td>\n",
+       "      <td>materiaal rit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>2024-08-29 05:03:00</td>\n",
+       "      <td>2024-08-29 05:07:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 startlocatie eindlocatie starttijd  eindtijd     activiteit  \\\n",
+       "0           0       ehvgar      ehvbst  05:03:00  05:07:00  materiaal rit   \n",
+       "\n",
+       "   buslijn  energieverbruik     starttijd datum      eindtijd datum  \\\n",
+       "0      NaN             1.98 2024-08-29 05:03:00 2024-08-29 05:07:00   \n",
+       "\n",
+       "   omloop nummer  \n",
+       "0              1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_planning.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_planning.rename(columns={'Unnamed: 0': 'index'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>startlocatie</th>\n",
+       "      <th>eindlocatie</th>\n",
+       "      <th>starttijd</th>\n",
+       "      <th>eindtijd</th>\n",
+       "      <th>activiteit</th>\n",
+       "      <th>buslijn</th>\n",
+       "      <th>energieverbruik</th>\n",
+       "      <th>starttijd datum</th>\n",
+       "      <th>eindtijd datum</th>\n",
+       "      <th>omloop nummer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ehvgar</td>\n",
+       "      <td>ehvbst</td>\n",
+       "      <td>05:03:00</td>\n",
+       "      <td>05:07:00</td>\n",
+       "      <td>materiaal rit</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>2024-08-29 05:03:00</td>\n",
+       "      <td>2024-08-29 05:07:00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index startlocatie eindlocatie starttijd  eindtijd     activiteit  buslijn  \\\n",
+       "0      0       ehvgar      ehvbst  05:03:00  05:07:00  materiaal rit      NaN   \n",
+       "\n",
+       "   energieverbruik     starttijd datum      eindtijd datum  omloop nummer  \n",
+       "0             1.98 2024-08-29 05:03:00 2024-08-29 05:07:00              1  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_planning.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
        "      <th>vertrektijd</th>\n",
        "      <th>startlocatie</th>\n",
        "    </tr>\n",
@@ -1795,7 +1957,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
